word and letter spacing issues

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -17,6 +17,8 @@ h3{
 }
 h1, h2, h3, a, p{
    font-family: "bebas"!important;
+   word-spacing: 2px;
+   letter-spacing: .5px;
 }
 body { }
 
